--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
     "@trpc/tanstack-react-query": "^11.4.3",
+    "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -58,6 +59,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.0",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
