--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
   "dependencies": {
+    "@clerk/nextjs": "^6.23.3",
+    "@clerk/themes": "^2.2.54",
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.9.0",
