--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prisma": "^6.11.0",
     "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
